--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.16.1",
+    "react-three-fiber": "^6.0.13",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.50.1",
     "sass-loader": "^10",
