--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -9,5 +9,6 @@
   "arrowParens": "avoid",
   "jsxSingleQuote": true,
   "printWidth":  120,
-  "tabWidth":  2
+  "tabWidth":  2,
+  "endOfLine": "auto"
 }
