--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dom-confetti": "^0.2.0",
     "react-promise-tracker": "^2.1.1",
     "react-query": "^3.16.1",
     "react-router-dom": "^6.4.5",
